Fixed issue with sidebar flickering in firefox

--- a/media/css/base.scss
+++ b/media/css/base.scss
@@ -233,6 +233,7 @@ a.btn {
     height: 100%;
     margin-right: 26px;
     width: 145px;
+    display: block;
     .nav-item:first-child .nav-link {
         border-radius: 2px 2px 0 0;
     }
